鼠标悬浮提示

--- a/my-app/index.html
+++ b/my-app/index.html
@@ -1,15 +1,40 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="https://openlayers.org/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Using OpenLayers with Vite</title>
+    <meta charset="UTF-8">
+    <title>Tooltip on Hover</title>
+    <link rel="stylesheet" href="node_modules/ol/ol.css">
+    <style>
+      .map {
+        width: 100%;
+        height: 800px;
+      }
+      #map {
+        position: relative;
+      }
+
+      #info {
+        position: absolute;
+        display: inline-block;
+        height: auto;
+        width: auto;
+        z-index: 100;
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        border-radius: 4px;
+        padding: 5px;
+        left: 50%;
+        transform: translateX(3%);
+        visibility: hidden;
+        pointer-events: none;
+      }
+    </style>
   </head>
   <body>
-    <!-- <div id="map"></div> -->
-    <div id="map" style="width:100%;height:800px;"></div>
-    <h1 id="msg"></h1>
-    <script type="module" src="./main.js"></script>
+    <div id="map" class="map">
+      <div id="info"></div>
+    </div>
+
+    <script type="module" src="main.js"></script>
   </body>
 </html>
